tests/baselines/reference/classAndVariableWithSameName.errors.txt
classAndVariableWithSameName.ts(1,7): error TS2300: Duplicate identifier 'C'.
classAndVariableWithSameName.ts(2,5): error TS2300: Duplicate identifier 'C'.
classAndVariableWithSameName.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
classAndVariableWithSameName.ts(5,11): error TS2300: Duplicate identifier 'D'.
classAndVariableWithSameName.ts(9,9): error TS2300: Duplicate identifier 'D'.


==== classAndVariableWithSameName.ts (5 errors) ====
    class C { foo: string; } // error
          ~
!!! error TS2300: Duplicate identifier 'C'.
    var C = ''; // error
        ~
!!! error TS2300: Duplicate identifier 'C'.
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class D { // error
              ~
!!! error TS2300: Duplicate identifier 'D'.
            bar: string;
        }
    
        var D = 1; // error
            ~
!!! error TS2300: Duplicate identifier 'D'.
    }